fix border on mobile

--- a/Step1/style.css
+++ b/Step1/style.css
@@ -46,9 +46,9 @@
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     overflow: hidden;
-
     left: 50%;
     transform: translateX(-50%);
+    border-radius: 6px;
   }
   
   .card__inner {
@@ -122,7 +122,6 @@
       .card__face {
         border-radius: 4px;
       }
-      
   }
   @media only screen and (max-width: 480px) {
     .card {
