--- a/Step2/style.css
+++ b/Step2/style.css
@@ -32,3 +32,12 @@ body {
     transform: translate(-50%, -50%);
     border-radius: 10px;
 }
+
+@media only screen and (max-width: 780px) {
+    #background { 
+        background-size: cover;
+    }
+      .card__face {
+        border-radius: 4px;
+      }
+  }
